初步移植代码